# GenAI_Reasoning_and_sampling

./: README.md  main.py  pyproject.toml
llm_experiments/: HumanEval.jsonl  eval_he.py  eval_math.py  file.py  he_eval_mcmc.jsonl  he_eval_mcmc.jsonl_results.jsonl  he_eval_naive.jsonl  he_eval_naive.jsonl_results.jsonl  he_eval_std.jsonl  he_eval_std.jsonl_results.jsonl  plot_alpha_sweep.py  plot_results.py  power_samp_he.py  power_samp_math.py  reshape_he.py
llm_experiments/Results/: phi_he_base_power_samp_results_10_0.25_0_0 (1).csv  phi_math_base_power_samp_results_10_0.25_2_0.csv
llm_experiments/results/phi/: phi_math_base_power_samp_results_5_0.1_0_0.csv  phi_math_base_power_samp_results_5_0.25_0_0.csv  phi_math_base_power_samp_results_5_0.5_0_0.csv  phi_math_base_power_samp_results_5_1.0_0_0.csv
